[package]
name = "rust_ai_agents"
version = "0.1.0"
edition = "2021"

[dependencies]
llm = { package = "graniet-llm", version = "0.3.0" }
smolagents-rs = "0.2.1"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
